--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1>Towkir A. Bappy</h1>
+                            <h1>A. H. M. Azimul Haque</h1>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -76,10 +76,10 @@
                             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
                             <!-- AddToAny END -->
 
-                            <a class="btn btn-success" href=""><span class="fa fa-download"></span> Download</a>
+                            <a class="btn btn-success" href="#!"><span class="fa fa-download"></span> Download</a>
                         </div>
                     </div>
-                    <h2>UI/UX Designer</h2>
+                    <h2>Software Engineer</h2>
                 </div><!-- Title end-->
 
                 <!-- ===========================
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-home"></span>EvenFly.com</a>
+                            <li><a href="http://orbachinujbuk.com/"><span class="social fa fa-home"></span>orbachinujbuk.com</a>
                             </li>
                             <li><a href=""><span class="social fa fa-skype"></span>+88 0123 45678</a>
                             </li>
@@ -99,9 +99,9 @@
 
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-facebook"></span>Facebook</a>
+                            <li><a href="https://www.facebook.com/orbachinujbuk"><span class="social fa fa-facebook"></span>Facebook</a>
                             </li>
-                            <li><a href=""><span class="social fa fa-twitter"></span>Twitter</a>
+                            <li><a href="https://twitter.com/orbachinujbuk"><span class="social fa fa-twitter"></span>Twitter</a>
                             </li>
                             <li><a href=""><span class="social fa fa-linkedin"></span>Linkedin</a>
                             </li>
