--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="/images/me.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>A. H. M. Azimul Haque (Rifat)</h2>
+            <h2 style="color: white; background: rgba(173,216,230, 0.7);">A. H. M. Azimul Haque (Rifat)</h2>
           </div>
         </div>
         <div class="w3-container">
