--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div> -->
         <div class="w3-container">
-          <h5 class="w3-opacity">Software Engineering at <b><a href="https://streamstech.com/" target="_blank">Jantrik Technologies Ltd.</b></a></h5>
+          <h5 class="w3-opacity">Software Engineering at <b><a href="https://streamstech.com/" target="_blank">Jantrik Technologies Limited</b></a></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2017 - </h6>
           <p></p><br>
         </div>
