--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div> -->
         <div class="w3-container">
-          <h5 class="w3-opacity">Technical Lead at <b><a href="#!" target="_blank">Innova Tech Inc.</b></a></h5>
+          <h5 class="w3-opacity"><b>Assistant Director</b> at <b><a href="https://pmo.gov.bd" target="_blank">Prime Minister's Office, Bangladesh</b></a></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2020 - </h6>
+          <p></p><br>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity">Technical Lead at <b><a href="https://innovabd.tech" target="_blank">Innova Tech Inc.</b></a></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 - </h6>
           <p></p><br>
         </div>
